<resources>
    <string name="app_name">Spotify Streamer</string>
    <string name="enter_artist_names">Enter artist names</string>
    <string name="title_activity_top_tracks">Top 10 Tracks</string>
    <string name="dummy_text">Hello world!</string>
    <string name="no_artists_result_text">No artists found, try a different name</string>
    <string name="no_tracks_result_text">No top tracks found</string>
    <string name="no_network_connection_text">Cannot reach the internet, check your network connection</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_now_playing">Now Playing</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_enable_notifications_label">Player Notification</string>
    <string name="pref_enable_notifications_key">enable_notification</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default">true</string>
    <string name="pref_country_codes_label">Country Code</string>
    <string name="pref_country_codes_key">country_code</string>
    <string name="pref_country_codes_af">AF</string>
    <string name="pref_country_codes_ax">AX</string>
    <string name="pref_country_codes_al">AL</string>
    <string name="pref_country_codes_dz">DZ</string>
    <string name="pref_country_codes_as">AS</string>
    <string name="pref_country_codes_ad">AD</string>
    <string name="pref_country_codes_ao">AO</string>
    <string name="pref_country_codes_ai">AI</string>
    <string name="pref_country_codes_aq">AQ</string>
    <string name="pref_country_codes_ag">AG</string>
    <string name="pref_country_codes_ar">AR</string>
    <string name="pref_country_codes_am">AM</string>
    <string name="pref_country_codes_aw">AW</string>
    <string name="pref_country_codes_au">AU</string>
    <string name="pref_country_codes_at">AT</string>
    <string name="pref_country_codes_az">AZ</string>
    <string name="pref_country_codes_bs">BS</string>
    <string name="pref_country_codes_bh">BH</string>
    <string name="pref_country_codes_bd">BD</string>
    <string name="pref_country_codes_bb">BB</string>
    <string name="pref_country_codes_by">BY</string>
    <string name="pref_country_codes_be">BE</string>
    <string name="pref_country_codes_bz">BZ</string>
    <string name="pref_country_codes_bj">BJ</string>
    <string name="pref_country_codes_bm">BM</string>
    <string name="pref_country_codes_bt">BT</string>
    <string name="pref_country_codes_bo">BO</string>
    <string name="pref_country_codes_bq">BQ</string>
    <string name="pref_country_codes_ba">BA</string>
    <string name="pref_country_codes_bw">BW</string>
    <string name="pref_country_codes_bv">BV</string>
    <string name="pref_country_codes_br">BR</string>
    <string name="pref_country_codes_io">IO</string>
    <string name="pref_country_codes_bn">BN</string>
    <string name="pref_country_codes_bg">BG</string>
    <string name="pref_country_codes_bf">BF</string>
    <string name="pref_country_codes_bi">BI</string>
    <string name="pref_country_codes_cv">CV</string>
    <string name="pref_country_codes_kh">KH</string>
    <string name="pref_country_codes_cm">CM</string>
    <string name="pref_country_codes_ca">CA</string>
    <string name="pref_country_codes_ky">KY</string>
    <string name="pref_country_codes_cf">CF</string>
    <string name="pref_country_codes_td">TD</string>
    <string name="pref_country_codes_cl">CL</string>
    <string name="pref_country_codes_cn">CN</string>
    <string name="pref_country_codes_cx">CX</string>
    <string name="pref_country_codes_cc">CC</string>
    <string name="pref_country_codes_co">CO</string>
    <string name="pref_country_codes_km">KM</string>
    <string name="pref_country_codes_cg">CG</string>
    <string name="pref_country_codes_cd">CD</string>
    <string name="pref_country_codes_ck">CK</string>
    <string name="pref_country_codes_cr">CR</string>
    <string name="pref_country_codes_hr">HR</string>
    <string name="pref_country_codes_cu">CU</string>
    <string name="pref_country_codes_cw">CW</string>
    <string name="pref_country_codes_cy">CY</string>
    <string name="pref_country_codes_cz">CZ</string>
    <string name="pref_country_codes_dk">DK</string>
    <string name="pref_country_codes_dj">DJ</string>
    <string name="pref_country_codes_dm">DM</string>
    <string name="pref_country_codes_do">DO</string>
    <string name="pref_country_codes_ec">EC</string>
    <string name="pref_country_codes_eg">EG</string>
    <string name="pref_country_codes_sv">SV</string>
    <string name="pref_country_codes_gq">GQ</string>
    <string name="pref_country_codes_er">ER</string>
    <string name="pref_country_codes_ee">EE</string>
    <string name="pref_country_codes_et">ET</string>
    <string name="pref_country_codes_fk">FK</string>
    <string name="pref_country_codes_fo">FO</string>
    <string name="pref_country_codes_fj">FJ</string>
    <string name="pref_country_codes_fi">FI</string>
    <string name="pref_country_codes_fr">FR</string>
    <string name="pref_country_codes_gf">GF</string>
    <string name="pref_country_codes_pf">PF</string>
    <string name="pref_country_codes_tf">TF</string>
    <string name="pref_country_codes_ga">GA</string>
    <string name="pref_country_codes_gm">GM</string>
    <string name="pref_country_codes_ge">GE</string>
    <string name="pref_country_codes_de">DE</string>
    <string name="pref_country_codes_gh">GH</string>
    <string name="pref_country_codes_gi">GI</string>
    <string name="pref_country_codes_gr">GR</string>
    <string name="pref_country_codes_gl">GL</string>
    <string name="pref_country_codes_gd">GD</string>
    <string name="pref_country_codes_gp">GP</string>
    <string name="pref_country_codes_gu">GU</string>
    <string name="pref_country_codes_gt">GT</string>
    <string name="pref_country_codes_gg">GG</string>
    <string name="pref_country_codes_gn">GN</string>
    <string name="pref_country_codes_gw">GW</string>
    <string name="pref_country_codes_gy">GY</string>
    <string name="pref_country_codes_ht">HT</string>
    <string name="pref_country_codes_hm">HM</string>
    <string name="pref_country_codes_va">VA</string>
    <string name="pref_country_codes_hn">HN</string>
    <string name="pref_country_codes_hk">HK</string>
    <string name="pref_country_codes_hu">HU</string>
    <string name="pref_country_codes_is">IS</string>
    <string name="pref_country_codes_in">IN</string>
    <string name="pref_country_codes_id">ID</string>
    <string name="pref_country_codes_ir">IR</string>
    <string name="pref_country_codes_iq">IQ</string>
    <string name="pref_country_codes_ie">IE</string>
    <string name="pref_country_codes_im">IM</string>
    <string name="pref_country_codes_il">IL</string>
    <string name="pref_country_codes_it">IT</string>
    <string name="pref_country_codes_jm">JM</string>
    <string name="pref_country_codes_jp">JP</string>
    <string name="pref_country_codes_je">JE</string>
    <string name="pref_country_codes_jo">JO</string>
    <string name="pref_country_codes_kz">KZ</string>
    <string name="pref_country_codes_ke">KE</string>
    <string name="pref_country_codes_ki">KI</string>
    <string name="pref_country_codes_kw">KW</string>
    <string name="pref_country_codes_kg">KG</string>
    <string name="pref_country_codes_la">LA</string>
    <string name="pref_country_codes_lv">LV</string>
    <string name="pref_country_codes_lb">LB</string>
    <string name="pref_country_codes_ls">LS</string>
    <string name="pref_country_codes_lr">LR</string>
    <string name="pref_country_codes_ly">LY</string>
    <string name="pref_country_codes_li">LI</string>
    <string name="pref_country_codes_lt">LT</string>
    <string name="pref_country_codes_lu">LU</string>
    <string name="pref_country_codes_mo">MO</string>
    <string name="pref_country_codes_mk">MK</string>
    <string name="pref_country_codes_mg">MG</string>
    <string name="pref_country_codes_mw">MW</string>
    <string name="pref_country_codes_my">MY</string>
    <string name="pref_country_codes_mv">MV</string>
    <string name="pref_country_codes_ml">ML</string>
    <string name="pref_country_codes_mt">MT</string>
    <string name="pref_country_codes_mh">MH</string>
    <string name="pref_country_codes_mq">MQ</string>
    <string name="pref_country_codes_mr">MR</string>
    <string name="pref_country_codes_mu">MU</string>
    <string name="pref_country_codes_yt">YT</string>
    <string name="pref_country_codes_mx">MX</string>
    <string name="pref_country_codes_fm">FM</string>
    <string name="pref_country_codes_md">MD</string>
    <string name="pref_country_codes_mc">MC</string>
    <string name="pref_country_codes_mn">MN</string>
    <string name="pref_country_codes_me">ME</string>
    <string name="pref_country_codes_ms">MS</string>
    <string name="pref_country_codes_ma">MA</string>
    <string name="pref_country_codes_mz">MZ</string>
    <string name="pref_country_codes_mm">MM</string>
    <string name="pref_country_codes_na">NA</string>
    <string name="pref_country_codes_nr">NR</string>
    <string name="pref_country_codes_np">NP</string>
    <string name="pref_country_codes_nl">NL</string>
    <string name="pref_country_codes_nc">NC</string>
    <string name="pref_country_codes_nz">NZ</string>
    <string name="pref_country_codes_ni">NI</string>
    <string name="pref_country_codes_ne">NE</string>
    <string name="pref_country_codes_ng">NG</string>
    <string name="pref_country_codes_nu">NU</string>
    <string name="pref_country_codes_nf">NF</string>
    <string name="pref_country_codes_kp">KP</string>
    <string name="pref_country_codes_mp">MP</string>
    <string name="pref_country_codes_no">NO</string>
    <string name="pref_country_codes_om">OM</string>
    <string name="pref_country_codes_pk">PK</string>
    <string name="pref_country_codes_pw">PW</string>
    <string name="pref_country_codes_ps">PS</string>
    <string name="pref_country_codes_pa">PA</string>
    <string name="pref_country_codes_pg">PG</string>
    <string name="pref_country_codes_py">PY</string>
    <string name="pref_country_codes_pe">PE</string>
    <string name="pref_country_codes_ph">PH</string>
    <string name="pref_country_codes_pn">PN</string>
    <string name="pref_country_codes_pl">PL</string>
    <string name="pref_country_codes_pt">PT</string>
    <string name="pref_country_codes_pr">PR</string>
    <string name="pref_country_codes_qa">QA</string>
    <string name="pref_country_codes_re">RE</string>
    <string name="pref_country_codes_ro">RO</string>
    <string name="pref_country_codes_ru">RU</string>
    <string name="pref_country_codes_rw">RW</string>
    <string name="pref_country_codes_bl">BL</string>
    <string name="pref_country_codes_sh">SH</string>
    <string name="pref_country_codes_kn">KN</string>
    <string name="pref_country_codes_lc">LC</string>
    <string name="pref_country_codes_mf">MF</string>
    <string name="pref_country_codes_pm">PM</string>
    <string name="pref_country_codes_vc">VC</string>
    <string name="pref_country_codes_ws">WS</string>
    <string name="pref_country_codes_sm">SM</string>
    <string name="pref_country_codes_st">ST</string>
    <string name="pref_country_codes_sa">SA</string>
    <string name="pref_country_codes_sn">SN</string>
    <string name="pref_country_codes_rs">RS</string>
    <string name="pref_country_codes_sc">SC</string>
    <string name="pref_country_codes_sl">SL</string>
    <string name="pref_country_codes_sg">SG</string>
    <string name="pref_country_codes_sx">SX</string>
    <string name="pref_country_codes_sk">SK</string>
    <string name="pref_country_codes_us">US</string>
</resources>