<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="@string/pref_enable_notifications_key"
        android:title="@string/pref_enable_notifications_label"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:defaultValue="@string/pref_enable_notifications_default" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:key="@string/pref_country_codes_key"
        android:title="@string/pref_country_codes_label"
        android:defaultValue="@string/pref_country_codes_us"
        android:entries="@array/pref_country_codes_options"
        android:entryValues="@array/pref_country_codes_values"
        />

</PreferenceScreen>
